kubernetes/dev/api.env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: holefeeder
spec:
  selector:
    matchLabels:
      app: api
  template:
    spec:
      containers:
        - name: api
