kubernetes/dev/budgeting.env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgeting
spec:
  selector:
    matchLabels:
      app: budgeting
      tier: backend
  template:
    spec:
      containers:
        - name: budgeting
