kubernetes/dev/gateway.env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
      tier: backend
  template:
    spec:
      containers:
        - name: gateway
