kubernetes/dev/object-store.env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-store
spec:
  selector:
    matchLabels:
      app: object-store
      tier: backend
  template:
    spec:
      containers:
        - name: object-store
