kubernetes/dev/ui.env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
      tier: frontend
  template:
    spec:
      containers:
        - name: ui
