kubernetes/dev/api.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: holefeeder
  labels:
    app: api
spec:
  ports:
    - name: api-debugger
      port: 22
      targetPort: 22
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: holefeeder
spec:
  selector:
    matchLabels:
      app: api
  template:
    spec:
      containers:
        - name: api
          ports:
            - containerPort: 22
              name: api-debugger
