kubernetes/dev/mysql.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: holefeeder
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
  selector:
    app: mysql
  type: NodePort
