kubernetes/dev/seq.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: seq
  namespace: holefeeder
  labels:
    app: seq
spec:
  ports:
    - name: seq-ingestion
      port: 5431
      targetPort: 5431
      nodePort: 30431
  selector:
    app: seq
  type: NodePort
