kubernetes/dev/ui.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: holefeeder
  labels:
    app: ui
spec:
  ports:
    - name: ui-debugger
      port: 22
      targetPort: 22
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: holefeeder
spec:
  selector:
    matchLabels:
      app: ui
  template:
    spec:
      containers:
        - name: ui
          ports:
            - containerPort: 22
              name: ui-debugger
